z-index missing components fix

--- a/management/server/webui/src/main/webapp/css/style.css
+++ b/management/server/webui/src/main/webapp/css/style.css
@@ -39,7 +39,7 @@ input[type=checkbox] {
 	position: absolute;
 	top: 27px;
 	right: 30px;
-	z-index: 3;
+	z-index: 8;
 }
 
 .b-header {
@@ -2079,7 +2079,7 @@ td.b-main-table__status-col {
 
 .b-tabs-menu {
     position: relative;
-    z-index: 8;
+    z-index: 7;
 	background-color: #FFF;
 }
 
